syntax = "proto3";

package pos;

option go_package="github.com/Andrewalifb/alpha-pos-system-sales-service";

import "google/protobuf/timestamp.proto";
import "alpha-pos-system-sales-service/api/proto/common.proto"; 

// PosSale
message PosSale {
  string sale_id = 1;
  string receipt_id = 2;  
  string product_id = 3;
  string customer_id = 4;
  int32 quantity = 5;
  double price = 6;
  google.protobuf.Timestamp sale_date = 7;
  double total_price = 8;
  string store_id = 9;
  string cashier_id = 10;
  string payment_method_id = 11;
  string branch_id = 13;
  string company_id = 14;
  google.protobuf.Timestamp created_at = 15;
  string created_by = 16;
  google.protobuf.Timestamp updated_at = 17;
  string updated_by = 18;
}

// Request and Response messages
message CreatePosSalesRequest {
  repeated PosSale pos_sales = 1;
  JWTPayload jwt_payload = 2;
  string jwt_token =3;
}

message CreatePosSalesResponse {
  repeated PosSale pos_sales = 1;
}

message ReadPosSaleRequest {
  string sale_id = 1;
  JWTPayload jwt_payload = 2;
  string jwt_token =3;
}

message ReadPosSaleResponse {
  PosSale pos_sale = 1;
}

message UpdatePosSaleRequest {
  PosSale pos_sale = 1;
  JWTPayload jwt_payload = 2;
  string jwt_token =3;
}

message UpdatePosSaleResponse {
  PosSale pos_sale = 1;
}

message DeletePosSaleRequest {
  string sale_id = 1;
  JWTPayload jwt_payload = 2;
  string jwt_token =3;
}

message DeletePosSaleResponse {
  bool success = 1;
}

message ReadAllPosSalesRequest {
  int32 limit = 1;
  int32 page = 2;
  JWTPayload jwt_payload = 3;
  string jwt_token = 4;
}

message ReadAllPosSalesResponse {
  repeated PosSale pos_sales = 1;
  int32 limit = 2;
  int32 page = 3;
  int32 max_page = 4;
  int64 count = 5;
}

// PosSaleService
service PosSaleService {
  rpc CreatePosSales(CreatePosSalesRequest) returns (CreatePosSalesResponse);
  rpc ReadPosSale(ReadPosSaleRequest) returns (ReadPosSaleResponse);
  rpc UpdatePosSale(UpdatePosSaleRequest) returns (UpdatePosSaleResponse);
  rpc DeletePosSale(DeletePosSaleRequest) returns (DeletePosSaleResponse);
  rpc ReadAllPosSales(ReadAllPosSalesRequest) returns (ReadAllPosSalesResponse);
}
